Update project details

--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
 
         <article class="project-card">
             <div class="project-image"></div>
-            <h3>Project 1</h3>
-            <p>descr</p>
-            <a class="project-button" href="">View</a>
+            <h3>PosgreSQL</h3>
+            <p>Customer Data Management System</p>
+            <a class="project-button" href="https://www.db-fiddle.com/f/4PKgdEsZqtCFpW2yukU3Ra/0">Run Program</a>
         </article>
 
         <article class="project-card">
             <div class="project-image"></div>
             <h3>C++</h3>
             <p>Class Roster System</p>
-             <a class="project-button" onclick="window.open('https://github.com/tavendqr/Student-Roster/actions/workflows/run-cpp.yml', '_blank')">Run C++ Program</a>
+             <a class="project-button" onclick="window.open('https://github.com/tavendqr/Student-Roster/actions/workflows/run-cpp.yml', '_blank')">Run Program</a>
         </article>
     </div>
 </section>
@@ -81,6 +81,7 @@
 
 </body>
 </html>
+
 
 
 
